@startuml
'https://plantuml.com/sequence-diagram



class Article {
id : int
titre : string
contenu : text
createdAt : datetime
slug : string
publie : bool
}

class Catégorie
{
id : int
titre : string
}

class Commentaire
{
id : int
contenu : string
createdAt : datetime
}

class Auteur
{
id : int
nom : string
prenom : string
pseudo : string
}

Article "0..*" -- "0..1"  Catégorie
Commentaire "0..*" -- "0..1" Auteur
Article "1..1" -- "0..*" Commentaire
@enduml